[project]
name = "DQChat-langGraph"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Junnos ", email = "junnos.dev@gmail.com"}]
requires-python = ">= 3.11, < 3.12"
dependencies = ["deepeval>=0.10.7,<0.11"]

[project.optional-dependencies]
default = []
test = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dqchat"]

[tool.pixi.project]
channels = ["pytorch", "nvidia", "conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
DQChat-langGraph = { path = ".", editable = true }

[tool.pixi.system-requirements]
linux = "5.15.0"

[tool.pixi.tasks]
generate_raft_dataset = "python -m dqchat --mode raft_dataset"
generate_raft_dataset_using_cache = "python -m dqchat --mode raft_dataset --cache-dir '/home/work/.nlp-data/.cache'"
gd = { depends-on = ["generate_raft_dataset"] }
gdc = { depends-on = ["generate_raft_dataset_using_cache"] }
train = "python -m dqchat --mode train"
t = { depends-on = ["train"] }
train_using_cache = "python -m dqchat --mode train --dataset-config question-answer --cache-dir '/home/work/.nlp-data/.cache'"
tc = { depends-on = ["train_using_cache"] }

[tool.pixi.dependencies]
pre-commit = ">=3.7.1,<4"
mypy = ">=1.11.1,<2"
pytorch = ">=2.4.0,<3"
langchain = ">=0.2.14,<0.3"
langgraph = ">=0.2.14,<0.3"
transformers = ">=4.44.2,<5"
datasets = ">=2.21.0,<3"
peft = ">=0.12.0,<0.13"
trl = ">=0.9.6,<0.10"
sentence-transformers = ">=3.0.1,<4"
accelerate = ">=0.33.0,<0.34"
chromadb = ">=0.5.5,<0.6"
orjson = ">=3.10.7,<4"
tqdm = ">=4.66.5,<5"
pillow = ">=9.4.0,<10"

[tool.pixi.target.linux-64.dependencies]
pytorch-cuda = "12.1.*"
bitsandbytes = ">=0.43.3,<0.44"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.2,<9"

[tool.pixi.feature.test.tasks]
test = "pytest"
test_state = "python tests/test_state.py"

[tool.pixi.environments]
default = ["default"]
test = ["default", "test"]

[tool.pyright]
venvPath = "."
venv = ".pixi/envs/default"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "inference.py" # Temporary, remove later.
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
